--- a/src/components/BrandGuides/GuidesSectionLogo/style.scss
+++ b/src/components/BrandGuides/GuidesSectionLogo/style.scss
@@ -1,12 +1,22 @@
 @import '../../../styles/_main';
 
 .GuidesSectionLogo {
+  padding-top: 80px;
+
   &__exclusion-img {
     display: block;
     width: 90%;
     max-width: 560px;
     margin-right: auto;
     margin-left: auto;
+  }
+
+  &__slider {
+    margin-bottom: 80px;
+
+    @media #{$screen-sm} {
+      margin-bottom: 160px;
+    }
   }
 
   &__construction-white-container {
@@ -70,6 +80,10 @@
     &--white {
       color: $c_white;
     }
+  }
+
+  @media #{$screen-sm} {
+    padding-top: 100px;
   }
 }
 
