--- a/src/components/BrandGuides/GuidesSectionTypography/style.scss
+++ b/src/components/BrandGuides/GuidesSectionTypography/style.scss
@@ -62,6 +62,7 @@
 
     @media #{$screen-md} {
       display: flex;
+      margin-bottom: 0;
     }
   }
 
@@ -71,9 +72,10 @@
     @media #{$screen-md} {
       display: flex;
       align-items: flex-end;
-      flex: 0 0 30%;
+      flex: 0 0 25%;
       flex-direction: column;
       margin-right: 40px;
+      margin-bottom: 40px;
     }
   }
 
@@ -93,5 +95,17 @@
     @media #{$screen-md} {
       display: block;
     }
+  }
+
+  &__row-content > * {
+    @media #{$screen-md} {
+      margin-top: -.25em;
+    }
+  }
+
+  @media #{$screen-md} {
+    margin-top: 160px;
+    padding-top: 80px;
+    padding-bottom: 80px;
   }
 }
