--- a/src/pages/brand/assets/index.scss
+++ b/src/pages/brand/assets/index.scss
@@ -1,17 +1,16 @@
 @import '../../../styles/_main';
 
-.GuidesPage {
-  background-color: $c_black;
-
+.AssetsPage {
   &__wrapper {
-    color: $c_white;
+    padding: 80px 0 0;
 
     @media #{$screen-sm} {
       width: 75%;
+      padding: 100px 0 0;
     }
 
     @media #{$screen-xl} {
-      padding-left: 160px;
+      padding: 100px 0 0 160px;
       border-left: 1px solid $c_ebony-clay;
     }
   }
