--- a/src/styles/common/_colors.scss
+++ b/src/styles/common/_colors.scss
@@ -16,6 +16,7 @@ $c_oslo-gray: #81858d;
 $c_light-gray: #c7ced8;
 
 $c_catskill_white: #f2f5f9;
+$c_sky-white: #e7edf5;
 
 $c_picton-blue: #3898ec;
 $c_raspberry: #e50158;
