--- a/src/components/BrandAssets/AssetTile/style.scss
+++ b/src/components/BrandAssets/AssetTile/style.scss
@@ -27,11 +27,11 @@
   &__download {
     position: absolute;
     bottom: 0;
-    left: 0;
+    left: 1px;
     display: none;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: calc(100% - 2px); // make up for border
     padding: 0;
     font-family: $font-secondary;
     font-size: 8px;
