--- a/src/components/BrandAssets/AssetTile/style.scss
+++ b/src/components/BrandAssets/AssetTile/style.scss
@@ -3,7 +3,16 @@
 .AssetTile {
   $_r: &;
 
+  flex: 0 0 25%;
   padding: 10px;
+
+  &--large {
+    flex: 0 0 50%;
+
+    @media #{$screen-sm} {
+      flex: 0 0 33.33%;
+    }
+  }
 
   &__inner {
     position: relative;
@@ -82,5 +91,9 @@
       max-width: 100%;
       max-height: 100%;
     }
+  }
+
+  @media #{$screen-sm} {
+    flex: 0 0 16.66%;
   }
 }
