--- a/src/components/BrandGuides/GuidesSectionIconography/style.scss
+++ b/src/components/BrandGuides/GuidesSectionIconography/style.scss
@@ -31,11 +31,7 @@
   }
 
   &__system-icon-container {
-    margin: 80px 0;
-
-    @media #{$screen-sm} {
-      margin: 160px 0;
-    }
+    margin: 80px 0 60px;
   }
 
   &__icon-type {
@@ -148,6 +144,7 @@
 
     @media #{$screen-sm} {
       width: 25%;
+      margin-bottom: 0;
       padding: 0 20px;
     }
   }
