--- a/src/components/BrandGuides/GuidesSectionLogo/style.scss
+++ b/src/components/BrandGuides/GuidesSectionLogo/style.scss
@@ -13,10 +13,6 @@
 
   &__slider {
     margin-bottom: 80px;
-
-    @media #{$screen-sm} {
-      margin-bottom: 160px;
-    }
   }
 
   &__construction-white-container {
@@ -98,6 +94,7 @@
     @media #{media-min-width(500px)} {
       width: 50%;
       margin-top: 40px;
+      margin-bottom: 0;
     }
   }
 
