--- a/src/components/BrandStory/StorySectionExplanation/index.scss
+++ b/src/components/BrandStory/StorySectionExplanation/index.scss
@@ -15,7 +15,7 @@
   }
 
   &__text p {
-    margin-bottom: 1.5em;
+    margin-bottom: 20px;
     font-size: 14px;
     line-height: 21px;
     color: $c_ebony-clay;
@@ -25,6 +25,16 @@
     position: absolute;
     right: 32px;
     bottom: 60px;
+  }
+}
+
+@media #{$screen-sm} {
+  .StorySectionExplanation {
+    &__text p {
+      margin-bottom: 40px;
+      font-size: 20px;
+      line-height: 30px;
+    }
   }
 }
 
@@ -53,11 +63,6 @@
       font-size: 60px;
       font-weight: normal;
       line-height: 70px;
-    }
-
-    &__text p {
-      font-size: 20px;
-      line-height: 30px;
     }
   }
 }
