Refactor slider to only show two slides at a time

--- a/src/components/Slider/style.scss
+++ b/src/components/Slider/style.scss
@@ -3,51 +3,28 @@
 .Slider {
   $_r: &;
 
-  &__track {
-    overflow: hidden;
-  }
-
-  &__carousel {
-    overflow: visible;
-  }
-
   &__carousel,
   &__inner-controls {
-    width: 246px;
-
-    @media #{$screen-sm} {
-      width: 347px;
-    }
-  }
-
-  &--large {
-    #{$_r} {
-      &__carousel,
-      &__inner-controls {
-        @media #{$screen-sm} {
-          width: 441px;
-        }
-      }
-    }
+    width: 100%;
   }
 
   &--spaced {
-    #{$_r}__inner-controls {
-      margin-right: -20px;
-      padding-right: 20px;
+    #{$_r}__carousel {
+      width: calc(100% + 20px);
+      margin-left: -10px;
 
       @media #{$screen-sm} {
-        margin-right: -40px;
-        padding-right: 40px;
+        width: calc(100% + 40px);
+        margin-left: -20px;
       }
     }
   }
 
   &__slide-inner--spaced {
-    padding-right: 20px;
+    padding: 0 10px;
 
     @media #{$screen-sm} {
-      padding-right: 40px;
+      padding: 0 20px;
     }
   }
 
@@ -66,8 +43,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    // width: 75%;
-    // max-width: 560px;
   }
 
   &__dots {
