--- a/src/components/Slider/style.scss
+++ b/src/components/Slider/style.scss
@@ -8,6 +8,10 @@
     width: 100%;
   }
 
+  &__slide-inner {
+    width: calc(100% - 1px);
+  }
+
   &--spaced {
     #{$_r}__carousel {
       width: calc(100% + 20px);
@@ -17,6 +21,10 @@
         width: calc(100% + 40px);
         margin-left: -20px;
       }
+    }
+
+    #{$_r}__slide-inner {
+      width: 100%;
     }
   }
 
