--- a/src/components/BrandGuides/GuidesSectionPallete/style.scss
+++ b/src/components/BrandGuides/GuidesSectionPallete/style.scss
@@ -24,7 +24,6 @@
   &__color-array-container {
     display: flex;
     justify-content: space-between;
-    max-width: 680px;
     margin-top: 80px;
   }
 
@@ -132,7 +131,13 @@
 
 .ColorArray {
   &__color-stop {
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: 20px;
+    height: 60px;
+    font-size: 16px;
+    line-height: 1.5;
   }
 }
