--- a/src/pages/token/style.scss
+++ b/src/pages/token/style.scss
@@ -80,6 +80,7 @@
     font-size: 14px;
     font-style: italic;
     line-height: 1.5;
+    text-align: justify;
 
     a {
       font-style: normal;
