--- a/src/pages/testnet/style.scss
+++ b/src/pages/testnet/style.scss
@@ -1,80 +1,161 @@
 @import '../../styles/main.scss';
 
-
-.PendingExchanges {
-  display: flex;
+body {
+  overflow-x: hidden;
 }
 
-.ExchangeCard {
-  margin: 1.875rem;
-  padding: 0 1.25rem;
-  text-align: center;
-  background-color: $c_white;
-  border-radius: 3px;
+.Stats {
+  color: $c_white;
+  background-color: $c_blue_ribbon;
+  background-image: url('../../assets/background/footer-left.png');
+  background-repeat: repeat-y;
+  background-blend-mode: lighten;
 
-  &__address {
-    max-width: 240px;
-    margin: 1.25rem auto;
-    padding: 1.375rem 2.875rem;
-    font-size: .875rem;
+  &__Container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin: auto;
+  }
+
+  & .TitleWrapper__title {
+    margin-bottom: 6.25rem;
     color: $c_white;
-    background-color: $c_blue_ribbon;
-    background-image: url('../../assets/background/roles-main-left-up.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 3px;
+  }
 
-    &:first-child {
+  &__Label {
+    width: 100%;
+    margin: 0 0 9.375rem 4rem;
+    text-align: left;
+
+    &__Text {
+      font-size: 1.875rem;
       font-weight: 300;
+      letter-spacing: 0;
+      text-transform: uppercase;
     }
 
-    & > h2 {
-      overflow: hidden;
-      font-size: 2em;
-      color: inherit;
-      text-overflow: ellipsis;
-    }
-  }
-
-  &__blockNumber {
-    font-size: 1rem;
-    font-weight: 300;
-
-    span:first-of-type {
-      font-weight: 700;
-      color: $c_blue_ribbon;
+    &__Value {
+      font-size: 5rem;
+      color: $c_white;
     }
   }
+}
 
-  &__tokens {
+.Dynamics {
+  & .ImageSection__image-container {
+    display: flex;
+    justify-content: center;
+    background-image: url('../../assets/background/testnet.svg');
+    background-size: cover;
+  }
+
+  & .ImageSection__title {
+    margin-bottom: 5.875rem;
+  }
+}
+
+.Exchanges {
+  background-color: $c_black;
+  background-image: url('../../assets/background/footer-left.png');
+  background-repeat: no-repeat;
+
+  &__Container {
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
-    margin-top: 2.5rem;
-    margin-bottom: 2.5rem;
-    line-height: 1.45;
 
-    & > h1 {
-      font-size: 2.8125rem;
-      line-height: 1.2;
-      color: $c_blue_ribbon;
-    }
-
-    &__dollarAmount {
+    & .TitleWrapper__subtitle {
       color: $c_grayc-chateau;
     }
   }
 
-  &__footer {
+  &__Pending {
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 1.25rem;
-    font-size: .8125rem;
+  }
 
-    span:first-of-type {
-      font-weight: bold;
+  &__Card {
+    margin: 1.875rem;
+    padding: 0 1.25rem;
+    text-align: center;
+    background-color: $c_white;
+    border-radius: 3px;
+
+    &__address {
+      max-width: 240px;
+      margin: 1.25rem auto;
+      padding: 1.375rem 2.875rem;
+      font-size: .875rem;
+      color: $c_white;
+      background-color: $c_blue_ribbon;
+      background-image: url('../../assets/background/roles-main-left-up.png');
+      background-repeat: no-repeat;
+      background-size: cover;
+      border-radius: 3px;
+
+      &:first-child {
+        font-weight: 300;
+      }
+
+      & > h2 {
+        overflow: hidden;
+        font-size: 2em;
+        color: inherit;
+        text-overflow: ellipsis;
+      }
     }
+
+    &__blockNumber {
+      font-size: 1rem;
+      font-weight: 300;
+
+      span:first-of-type {
+        font-weight: 700;
+        color: $c_blue_ribbon;
+      }
+    }
+
+    &__tokens {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+      width: 100%;
+      margin-top: 2.5rem;
+      margin-bottom: 2.5rem;
+      line-height: 1.45;
+
+      & > h1 {
+        font-size: 2.8125rem;
+        line-height: 1.2;
+        color: $c_blue_ribbon;
+      }
+
+      &__dollarAmount {
+        color: $c_grayc-chateau;
+      }
+    }
+
+    &__footer {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 1.25rem;
+      font-size: .8125rem;
+
+      span:first-of-type {
+        font-weight: bold;
+      }
+    }
+
+    button {
+      max-width: 15.625rem;
+      margin: 5rem auto;
+    }
+  }
+
+  &__Button {
+    max-width: 15.625rem;
+    margin: 5rem auto;
   }
 }
