--- a/src/pages/testnet/style.scss
+++ b/src/pages/testnet/style.scss
@@ -84,10 +84,38 @@ body {
         justify-content: center;
 
         & > span {
-          margin-top: .625rem;
-          font-size: .875rem;
+          margin-top: 0.625rem;
+          font-size: 0.875rem;
           color: $c_white;
         }
+      }
+    }
+
+    &__Info {
+      margin-top: 4rem;
+      font-size: 1.25rem;
+
+      & > * {
+        margin-bottom: 1.25rem;
+      }
+
+      &__Dates {
+        & > div {
+          margin-bottom: 2rem;
+        }
+
+        &__Value {
+          font-style: italic;
+        }
+
+        &__Label {
+          margin-right: 1rem;
+        }
+      }
+
+      &__Success > span {
+        display: inline-block;
+        margin-bottom: 1.25rem;
       }
     }
 
@@ -119,7 +147,7 @@ body {
       padding: 2.5rem 4.5rem 1.5rem 2.5rem;
       color: $c_white;
       background-color: $c_blue_ribbon;
-      border-radius: .375rem;
+      border-radius: 0.375rem;
 
       &__Days {
         display: flex;
@@ -127,7 +155,7 @@ body {
         text-align: center;
 
         &__Text {
-          font-size: .875rem;
+          font-size: 0.875rem;
           color: $c_white;
           text-transform: capitalize;
         }
@@ -332,7 +360,7 @@ body {
       max-width: 240px;
       margin: 1.25rem auto;
       padding: 1.375rem 2.875rem;
-      font-size: .875rem;
+      font-size: 0.875rem;
       color: $c_white;
       background-color: $c_blue_ribbon;
       background-image: url('../../assets/background/exchange-card-pattern.svg');
@@ -386,7 +414,7 @@ body {
       display: flex;
       justify-content: space-between;
       margin-bottom: 1.25rem;
-      font-size: .8125rem;
+      font-size: 0.8125rem;
 
       span:first-of-type {
         font-weight: bold;
