--- a/src/pages/testnet/style.scss
+++ b/src/pages/testnet/style.scss
@@ -84,8 +84,8 @@ body {
         justify-content: center;
 
         & > span {
-          margin-top: 0.625rem;
-          font-size: 0.875rem;
+          margin-top: .625rem;
+          font-size: .875rem;
           color: $c_white;
         }
       }
@@ -147,7 +147,7 @@ body {
       padding: 2.5rem 4.5rem 1.5rem 2.5rem;
       color: $c_white;
       background-color: $c_blue_ribbon;
-      border-radius: 0.375rem;
+      border-radius: .375rem;
 
       &__Days {
         display: flex;
@@ -155,7 +155,7 @@ body {
         text-align: center;
 
         &__Text {
-          font-size: 0.875rem;
+          font-size: .875rem;
           color: $c_white;
           text-transform: capitalize;
         }
@@ -360,7 +360,7 @@ body {
       max-width: 240px;
       margin: 1.25rem auto;
       padding: 1.375rem 2.875rem;
-      font-size: 0.875rem;
+      font-size: .875rem;
       color: $c_white;
       background-color: $c_blue_ribbon;
       background-image: url('../../assets/background/exchange-card-pattern.svg');
@@ -414,7 +414,7 @@ body {
       display: flex;
       justify-content: space-between;
       margin-bottom: 1.25rem;
-      font-size: 0.8125rem;
+      font-size: .8125rem;
 
       span:first-of-type {
         font-weight: bold;
