Make Paragraph a Lighter gray

--- a/src/pages/testnet/style.scss
+++ b/src/pages/testnet/style.scss
@@ -267,6 +267,10 @@ body {
   background-image: url('../../assets/background/footer-left.png');
   background-repeat: no-repeat;
 
+  & p {
+    color: $c_grayc-chateau;
+  }
+
   &__Container {
     display: flex;
     align-items: center;
