Added fix to hero paragraph

--- a/src/pages/alexandria/style.scss
+++ b/src/pages/alexandria/style.scss
@@ -1,6 +1,6 @@
 @import '../../styles/main.scss';
 
-.ConstantinoplePage {
+.AlexandriaPage {
   &__hero-paragraph {
     padding-bottom: 60px;
   }
